Here is my website design portfolio

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>A Generic Page</title>
-    <meta name="description" content="something good should go here">
-    <meta name="author" content="your name should go here">
+    <title>Home | Ren Nakanote | Creative Design Portfolio</title>
+    <meta name="description" content="Ren Nakanote Website Design Portfolio">
+    <meta name="author" content="Ren Nakanote">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -18,10 +18,11 @@
 
     <!-- Your Stylesheets -->
     <link rel="stylesheet" href="stylesheets/main.css" >
-
+	<link rel="stylesheet/less" href="/path/to/bootstrap.less">
+		
     <!-- Base Javascripts -->
     <script src="javascripts/lib/base.js"></script>
-
+	<script src="/path/to/less.js"></scrip     
     <!-- Fancybox Lightbox http://fancyapps.com/fancybox/#examples -->
     <script src="javascripts/lib/jquery.fancybox.js"></script>
 
@@ -31,29 +32,55 @@
 
   </head>
 
-  <body>
-    <div class="container">
+<body>
 
+<div class="container">
       <div class="row">
-
-        <div class="span2">
-          PUT
-        </div>
-
-        <div class="span2">
-          STUFF
-        </div>
-
-        <div class="span2">
-          HERE
-        </div>
-
-        <div class="span10">
-          <h2>Example Image Gallery</h2>
-          <a class="fancybox" href="images/187.jpg" data-fancybox-group="gallery" title="COGS 187"><img src="images/187.jpg" alt="COGS187" /></a>
-          <a class="fancybox" href="images/187.jpg" data-fancybox-group="gallery" title="COGS 187"><img src="images/187.jpg" alt="COGS187" /></a>
-        </div>
-
+		<img src="images/header.png" id="head"> 
+      </div>
+      <div class="row">
+	<div id="navbar"><hr />
+	  <ol>
+	    <li><a href="index.html"><u>Home. </u> </a></li>
+            <li><a href="work.html">Work.  </a></li>
+            <li><a href="contact.html">Contact.</a></li>
+	  </ol>
+	 </div>
+      </div>
+      <div class="row">   
+        <div class="content-left offset2 span5">      
+	      <img src="images/me2.jpg" class="span4">
+	  
+	</div>
+	<div class="content-right offset2 span6 ">
+	  <h2>Welcome to my personal portfolio page.  This page was constructed
+	  during my study at University of California San Diego in my multimedia design program.   </h2>
+	  
+	  <h2>Here you will find
+	  some examples of future and past works I have done.  Be sure to click on the
+	  Work link above.</h2>
+	  
+	  <h3>Some of my interests are researching emergent technologies, traveling and spending time with friends and family.</h3	>
+	  <h3>Some countries I have traveled to are :</h3>
+	  <ol>	
+	    <p></p> 
+	  
+	    <li>Mexico</li>
+	    <li>Holland</li>
+	    <li>Serbia</li>
+	    <li>Bosnia</li>
+	    <li>Croatia</li>
+	    <li>Japan</li>
+	  </ol>
+	  
+	</div>
+      </div>
+      <div class="row">
+	<div class="footer">
+	  
+	  
+	    <h4>For inquiries about my work, you can call me or send me an email.</h4>
+<footer>Copyright 2012 |  Ren Nakanote |  email: rnakanot(at)ucsd.edu |  Direct Contact Number: 619.800.6822</footer></div>
       </div> <!-- end row -->
 
     </div> <!-- end container -->
