added contac+ work title in header 1/26/12

--- a/work.html
+++ b/work.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>A Generic Page</title>
+    <title>Work | Ren Nakanote | Creative Design Portfolio</title>
     <meta name="description" content="Ren Nakanote Website Design Portfolio">
     <meta name="author" content="Ren Nakanote">
 
